--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   docker_image_scan:
     name: Build and Scan a Docker Image
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
