--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,15 @@ jobs:
 
       - name: Build Docker Image
         run: docker build -f Dockerfile -t whale . 
+        
+      #then login to docker, to siccessfully runt he docker scout
+      - name: Login to Dockerhub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.username }}
+          password: ${{ secrets.password }}
 
+          
       - name: Docker Scout
         uses: docker/scout-action@v1
 
