--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,23 +25,29 @@ jobs:
         with:
           docker_version: '28.0.1'
 
-      - name: Build Docker Image
-        run: docker build -f Dockerfile -t whale . 
+      #- name: Build Docker Image
+      #  run: docker build -f Dockerfile -t whale . 
         
       #then login to docker, to siccessfully runt he docker scout
       - name: Login to Dockerhub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.username }}
-          password: ${{ secrets.password }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
 
+      - name: Build Docker Image
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/whale:latest -f Dockerfile .
 
+      - name: Push Docker Image to Docker Hub
+        run: docker push ${{ secrets.username }}/whale:latest
+          
       # Scan with Docker Scout
       - name: Docker Scout
         uses: docker/scout-action@v1
         with:
           command: cves,recommendations,compare,sbom
-          image: whale  # ✅ Scan the built image
+          image: ${{ secrets.username }}/whale:latest  # ✅ Now scanning a public image
+          #image: whale  # ✅ Scan the built image
           exit-code: false  # Don't fail the workflow if CVEs are found
           sarif-file: sca_scout.sarif
           output: sbom_scout.spdx.json
