--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -f Dockerfile -t ${{ secrets.DOCKER_HUB_USERNAME }}/whale .
+        run: docker build -f Dockerfile -t ${{ secrets.USERNAME }}/whale:latest .
 
       - name: Push Docker Image to Docker Hub
         run: docker push ${{ secrets.username }}/whale
